<?xml version="1.0"?>
<package format="2">
  <name>whole_body_ik</name>
  <version>1.0.0</version>
  <description>The whole_body_ik package</description>
  <maintainer email="spiperakis@ics.forth.gr">master</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>whole_body_ik_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>whole_body_ik_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>whole_body_ik_msgs</exec_depend>
</package>
